--- a/12345.html
+++ b/12345.html
@@ -19,7 +19,7 @@
     <script src="js/bootstrap.bundle.min.js/"></script>
 	<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<h1 class="my-class">
+				<h1 class="title">
 					<a class="navbar-brand" href="#">Legally Blonde</a> </h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
@@ -28,11 +28,11 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item">
-									<h1 class="my-class">
+									<h1 class="title">
 										<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a> </h1>
 								 </li>
 								<li class="nav-item active">
-									<h1 class="my-class"> <a class="nav-link" href="123456.html">Cast</a></h1>
+									<h1 class="title"> <a class="nav-link" href="123456.html">Cast</a></h1>
 								</li>	
 							</ul>
 							<form class="form-inline my-2 my-lg-0">
@@ -82,3 +82,4 @@
  		</footer>
 		</main>
 	</body>
+</html>
