--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/bootstrap.bundle.min.js/"></script>	
     	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#">TITEL</a></h1>
+					<a class="navbar-brand" href="#">LOGO</a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -48,8 +48,8 @@
 		<div class=" col-md-12 col-lg-12">
 			<div class="jumbotron jumbotron-fluid">
 			  <div class="container">
-				<h1 class="display-4">Cast</h1>
-				<p class="lead">Here is a list with cast members of the official Broadway Musical Legally Blonde</p>
+				<h1 class="display-4">LOGO</h1>
+				<p class="lead">EXPLANATION</p>
 			  </div>
 			</div>
 		</div>
@@ -60,34 +60,41 @@
 		<div class="container">
         <div class="row">
 		<div class=" col-md-4 col-lg-4">
-                <header class="first">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</header>
+                <header class="subtext">Home Supplies</header>
             </div>
-			
+		<div class=" col-md-4 col-lg-4">
+               <header class="subtext">Clothes</header>
+        </div>
+		<div class=" col-md-4 col-lg-4">
+               <header class="subtext">Cosmetics</header>
+        </div>
             <div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/legally_blonde_2.jpg" alt="">
+                <img class="img-fluid" src="images/" alt="">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/legally_blonde.jpg" alt="">
+                <img class="img-fluid" src="images/" alt="">
+				</header>
+            </div>
+			<div class="col-md-4 col-lg-4">
+				<header class="first">
+                <img class="img-fluid" src="images/" alt="">
 				</header>
             </div>
 			<div class="col-md-12 col-lg-12">	
 				 </div>
 			<div class="col-md-12 col-lg-12">
-				<h1 class="my-class">The Cast</h1>
+				<h1 class="title">Our Experts</h1>
 			</div>
             <div class="col-md-8 col-lg-8">
-				<header class="first">
-                <img class="img-fluid" src="images/maincast.jpg" alt="">
+				<header class="subtext">
+                <h1 class="subtext">EXPLANATION EXPERTS</h1>
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-                <h1 class="first">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</h1>
-            </div>
-            <div class="col-md-12 col-lg-12">
-                <h1 class="flower">Get to know the cast</h1>
+                <img class="img-fluid" src="images/" alt="">
             </div>
 		</div>
 		</div>
