--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 			</div>
             <div class="col-md-8 col-lg-8">
 				<header class="subtext">
-                <h1 class="subtext">EXPLANATION EXPERTS</h1>
+                <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
+
+They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. Check out our experts!</h1>
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
