--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/bootstrap.bundle.min.js/"></script>	
     	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#">LOGO</a></h1>
+					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo" alt=""></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
