--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/bootstrap.bundle.min.js/"></script>	
     	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo" alt=""></a></h1>
+					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -48,7 +48,7 @@
 		<div class=" col-md-12 col-lg-12">
 			<div class="jumbotron jumbotron-fluid">
 			  <div class="container">
-				<h1 class="display-4"><img class="img-fluid" src="images/logo" alt=""></h1>
+				<h1 class="display-4"><img class="img-fluid" src="images/logo.png" alt=""></h1>
 				<p class="lead">Welcome to the website of NEXT HIVE. In a world where a sustainable lifestyle is very expensive, we believe that sustainability should be available for everyone, no matter what income. NEXT HIVE can offer you advice on living an environmental friendly lifestyle, as well as a comparison of various, sustainable products. Feel free to take a look around!</p>
 			  </div>
 			</div>
