--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="container">
         <div class="row">
 		<div class=" col-md-4 col-lg-4">
-                <header class="subtext">Home Supplies</header>
+                <header class="subtext">Home</header>
             </div>
 		<div class=" col-md-4 col-lg-4">
                <header class="subtext">Clothes</header>
@@ -70,17 +70,17 @@
         </div>
             <div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/" alt="">
+                <img class="img-fluid" src="images/house.jpg" alt="">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/" alt="">
+                <img class="img-fluid" src="images/clothes.jpg" alt="">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/" alt="">
+                <img class="img-fluid" src="images/make_up.jpg" alt="">
 				</header>
             </div>
 			<div class="col-md-12 col-lg-12">	
@@ -96,7 +96,7 @@ They will help you compare products and services. In addition they wil help you 
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-                <img class="img-fluid" src="images/" alt="">
+                <img class="img-fluid" src="images/expert.jpg" alt="">
             </div>
 		</div>
 		</div>
