--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ They will help you compare products and services. In addition they wil help you 
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-                <img class="img-fluid" src="images/expert.jpg" alt="">
+                <img class="img-fluid" src="images/expert.jpg" alt="" width="6000" height="4000">
             </div>
 		</div>
 		</div>
-	<footer class="end">
+	<footer class="subtext">
  			More info is on the website of <br>
 			<a href="https://www.buas.nl/" target="_blank"> Breda University of Applied Sciences </a>
  	</footer>
