--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
         </div>
             <div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/house.jpg" alt="" width="210" height="140">
+                <img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/clothes.jpg" alt="" width="210" height="140">
+                <img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/make_up.jpg" alt="" width="210" height="140">
+                <img class="img-fluid" src="images/makeup.jpg" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-12 col-lg-12">	
