--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="first">
-                <img class="img-fluid" src="images/makeup.jpg" alt="" width="600" height="400">
+                <img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-12 col-lg-12">	
