--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Hello, world!</title>
   </head>
-	<body>
+	<body id="background">
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery (propper.js is inlcuded in the Bootstrap JS) and Bootstrap Bundle (includes Popper) -->
@@ -56,7 +56,7 @@
 		</div>
 		</div>
 	</header>
-	<main>
+	<main class="box">
 		<div class="container">
         <div class="row">
 		<div class=" col-md-4 col-lg-4">
