--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 		</div>
 		</div>
 	</header>
-	<main class="box">
+	<main>
+		<div class="box">
 		<div class="container">
-        <div class="row">
+        <div class="row">		
 		<div class=" col-md-4 col-lg-4">
                 <header class="subtext">Home</header>
             </div>
@@ -83,8 +84,18 @@
                 <img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400">
 				</header>
             </div>
+			</div>
+			</div>
+		</div>
+		<div class="container">
+        <div class="row">
 			<div class="col-md-12 col-lg-12">	
 				 </div>
+		</div>
+		</div>
+		<div class="box">
+		<div class="container">
+        <div class="row">
 			<div class="col-md-12 col-lg-12">
 				<h1 class="title">Our Experts</h1>
 			</div>
@@ -98,6 +109,7 @@ They will help you compare products and services. In addition they wil help you 
             <div class="col-md-4 col-lg-4">
                 <img class="img-fluid" src="images/expert.jpg" alt="" width="6000" height="4000">
             </div>
+		</div>
 		</div>
 		</div>
 	<footer class="subtext">
