--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
+		</div>
 		<div class="box">
 		<div class="container">
         <div class="row">
