--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 		</div>
 	</header>
 	<main>
+		<div class="container">
+        <div class="row">
+			<div class="col-md-12 col-lg-12"> <br>
+		</div>
+		</div>
+		</div>
 		<div class="box">
 		<div class="container">
         <div class="row">		
