--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>NEXT HIVE</title>
   </head>
 	<body id="background">
 		<!-- Optional JavaScript; choose one of the two! -->
@@ -17,7 +17,7 @@
     <!-- Option 1: jQuery (propper.js is inlcuded in the Bootstrap JS) and Bootstrap Bundle (includes Popper) -->
     <script src="js/jquery-3.6.0.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js/"></script>	
-    	<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ff8302;">
+    	<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ff8302; width: 100%">
 				<h1 class="my-class">
 					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_tiny.png" alt="" width="75" height="75"></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,6 +118,8 @@ They will help you compare products and services. In addition they wil help you 
             <div class="col-md-4 col-lg-4">
                 <img class="img-fluid" src="images/expert.jpg" alt="" width="6000" height="4000">
             </div>
+			<div class="col-md-12 col-lg-12"> <br>
+		</div>
 		</div>
 		</div>
 		</div>
