--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>NEXT HIVE</title>
   </head>
-	<body id="background">
+	<body>
 		<!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery (propper.js is inlcuded in the Bootstrap JS) and Bootstrap Bundle (includes Popper) -->
