--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Option 1: jQuery (propper.js is inlcuded in the Bootstrap JS) and Bootstrap Bundle (includes Popper) -->
     <script src="js/jquery-3.6.0.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js/"></script>	
-    	<nav class="navbar navbar-expan d-lg navbar-dark" style="background-color: #ff8302; width: 100%">
+		 
+    	<nav class="navbar">
 				<h1 class="my-class">
 					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_tiny.png" alt="" width="75" height="75"></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +72,7 @@
                 <header class="subtext">Home</header>
             </div>
 		<div class=" col-md-4 col-lg-4">
-               <header class="subtext">Clothes</header>
+               <header class="subtext"><strong>Clothes</strong></header>
         </div>
 		<div class=" col-md-4 col-lg-4">
                <header class="subtext">Cosmetics</header>
