--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Option 1: jQuery (propper.js is inlcuded in the Bootstrap JS) and Bootstrap Bundle (includes Popper) -->
     <script src="js/jquery-3.6.0.slim.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js/"></script>	
+    <script src="js/bootstrap.bundle.min.js"></script>	
 		 
     	<nav class="navbar">
 				<h1 class="my-class">
