--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item active">
-										<h1 class="my-class">
-											<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></h1>
+									<h1 class="my-class">
+										<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+									</h1>									
 								 </li>
 								<li class="nav-item">
 										<h1 class="my-class">
@@ -68,30 +69,27 @@
 		<div class="box">
 		<div class="container">
         <div class="row">		
-		<div class=" col-md-4 col-lg-4">
-                <header class="subtext">Home</header>
-            </div>
-		<div class=" col-md-4 col-lg-4">
-               <header class="subtext"><strong>Clothes</strong></header>
-        </div>
-		<div class=" col-md-4 col-lg-4">
-               <header class="subtext">Cosmetics</header>
-        </div>
             <div class="col-md-4 col-lg-4">
+							
+				<header class="subtext"><a href="12345.html" target="_blank">Home</a></header><br>
 				<header class="first">
                 <img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400">
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
+
             </div>
 			<div class="col-md-4 col-lg-4">
+				<!-- change click links to right page! -->
+				<header class="subtext"><a href="12345.html" target="_blank">Clothes</a></header><br>
 				<header class="first">
                 <img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
-				<header class="first">
-                <img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400">
+				<header class="subtext"><a href="12345.html" target="_blank">Cosmetics</a></header><br>
+				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>
+               
 				</header>
             </div>
 			</div>
