--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <div class="row">		
             <div class="col-md-4 col-lg-4">
 							
-				<header class="subtext"><a href="12345.html" target="_blank">Home</a></header><br>
-				<header class="first">
-                <img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400">
+				<header class="subtext">Home</header><br>
+				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
@@ -81,15 +80,13 @@
             </div>
 			<div class="col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
-				<header class="subtext"><a href="12345.html" target="_blank">Clothes</a></header><br>
-				<header class="first">
-                <img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400">
+				<header class="subtext">Clothes</header><br>
+				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
-				<header class="subtext"><a href="12345.html" target="_blank">Cosmetics</a></header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>
-               
+				<header class="subtext">Cosmetics</header><br>
+				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
 				</header>
             </div>
 			</div>
