--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
 		<div class="box">
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12">
-				<h1 class="title">Our Experts</h1>
-			</div>
             <div class="col-md-8 col-lg-8">
+				<h1 class="title">Our Experts</h1>
 				<header class="subtext">
                 <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
 
@@ -112,16 +110,16 @@ They will help you compare products and services. In addition they wil help you 
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-                <img class="img-fluid" src="images/expert.jpg" alt="" width="6000" height="4000">
+				<header class="first"><a href="12345.html" target="_blank"><br><br><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
             </div>
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
 		</div>
-	<footer class="subtext">
- 			More info is on the website of <br>
-			<a href="https://www.buas.nl/" target="_blank"> Breda University of Applied Sciences </a>
+	<footer class="endtext">
+ 			Follow us on
+			<a href="https://www.instagram.com/nexthiveofficial/" target="_blank">Instagram</a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank">FaceBook</a>
  	</footer>
 	</main>
 	</body>
