layout second page

--- a/12345.html
+++ b/12345.html
@@ -48,29 +48,22 @@
 		<div class="box">
 		<div class="container">
         <div class="row">		
-            <div class="col-md-4 col-lg-4">
-							
-				<header class="subtext">Home</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-				</header>
-
-            </div>
-			<div class="col-md-4 col-lg-4">
-				<!-- change click links to right page! -->
-				<header class="subtext">Clothes</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
-				</header>
-            </div>
-			<div class="col-md-4 col-lg-4">
-				<header class="subtext">Cosmetics</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
-				</header>
-            </div>
+            <div class="col-md-3 col-lg-3">
+				<a class="colortitle">Jeans</a>
+				<a class="subtext"><!-- Explanation Text --></a>
 			</div>
+			<div class="col-md-3 col-lg-3">
+				<a class="subtext">Low Price</a>
 			</div>
+			<div class="col-md-3 col-lg-3">
+            </div>
+			<div class="col-md-3 col-lg-3">
+            </div>
 		</div>
+		</div>
+		</div>
+		
+		
 		<div class="container">
         <div class="row">
 			<div class="col-md-12 col-lg-12"> <br>
