--- a/12345.html
+++ b/12345.html
@@ -49,11 +49,12 @@
 		<div class="container">
         <div class="row">		
             <div class="col-md-3 col-lg-3">
-				<a class="colortitle">Jeans</a>
-				<a class="subtext"><!-- Explanation Text --></a>
+				<h1 class="colortitle">Jeans</h1>
+				<p class="subtext"><!-- Explanation Text --></p>
 			</div>
 			<div class="col-md-3 col-lg-3">
-				<a class="subtext">Low Price</a>
+				<h1 class="subtext">Low Price</h1>
+				<p class="subtext"><!-- Explanation Text --></p>
 			</div>
 			<div class="col-md-3 col-lg-3">
             </div>
