--- a/12345.html
+++ b/12345.html
@@ -53,17 +53,18 @@
 				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
 			<div class="col-md-3 col-lg-3">
-				<h1 class="subtitle">Low Price</h1>
+			<div class="container-orange">
+				<h3>Low Price</h3>
 				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
-				
 			</div>
+			</div>		
 			<div class="col-md-2 col-lg-2">
 				<h1 class="subtitle">Middle Price</h1>
 				<p class="subtext"><!-- Picture --></p>
 			</div>
 			<div class="col-md-1 col-lg-1">
-				<p class="summarye"><!-- Explanation Text --></p>
+				<p class="summary"><!-- Explanation Text --></p>
             </div>
 			<div class="col-md-2 col-lg-2">
 				<h1 class="subtitle">Low Price</h1>
