--- a/12345.html
+++ b/12345.html
@@ -45,6 +45,7 @@
 						</div>
 					</nav>
 	<main>
+		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="box">
 		<div class="container">
         <div class="row">
@@ -53,53 +54,94 @@
 				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
 			<div class="col-md-3 col-lg-3">
-			<div class="container-orange">
+			<article class="green">
 				<h3>Low Price</h3>
 				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
-			</div>
+			</article>
 			</div>		
-			<div class="col-md-2 col-lg-2">
-				<h1 class="subtitle">Middle Price</h1>
-				<p class="subtext"><!-- Picture --></p>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>Middle Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
 			</div>
-			<div class="col-md-1 col-lg-1">
-				<p class="summary"><!-- Explanation Text --></p>
-            </div>
-			<div class="col-md-2 col-lg-2">
-				<h1 class="subtitle">Low Price</h1>
-				<p class="subtext"><!-- Picture --></p>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>High Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
 			</div>
-			<div class="col-md-1 col-lg-1">
-				<p class="summary"><!-- Explanation Text --></p>
-            </div>
 		</div>
 		</div>
 		</div>
-		
-		
-		<div class="container">
-        <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-		</div>
-		</div>
+			
+		<div class="col-md-12 col-lg-12"><br></div>
+			
 		<div class="box">
 		<div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-8">
-				<h1 class="title">Our Experts</h1>
-				<header class="subtext">
-                <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
-
-They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. Check out our experts!</h1>
-				</header>
-            </div>
-            <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345.html" target="_blank"><br><br><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
-            </div>
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-md-3 col-lg-3">
+				<h1 class="colortitle">Dresses</h1>
+				<p class="summary"><!-- Explanation Text --> exlanation</p>
+			</div>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>Low Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>		
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>Middle Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>High Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>
 		</div>
+		</div>
+		</div>
+		
+		<div class="col-md-12 col-lg-12"><br></div>
+		
+		<div class="box">
+		<div class="container">
+        <div class="row">
+		<div class="col-md-3 col-lg-3">
+				<h1 class="colortitle">T-shirts</h1>
+				<p class="summary"><!-- Explanation Text --> exlanation</p>
+			</div>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>Low Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>		
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>Middle Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>
+			<div class="col-md-3 col-lg-3">
+			<article class="green">
+				<h3>High Price</h3>
+				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h5><!-- Explanation Text -->text</h5>
+			</article>
+			</div>
 		</div>
 		</div>
 		</div>
