--- a/12345.html
+++ b/12345.html
@@ -29,12 +29,32 @@
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item active">
 									<h1 class="my-class">
-										<a class="nav-link" href="index.html">Home</a>
+										<a class="nav-link" href="index.html">Homepage</a>
 									</h1>									
 								 </li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Contact<span class="sr-only">(current)</span></a>
+											<a class="nav-link" href="12345.html">Home</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="12345.html">Clothes<span class="sr-only">(current)</span></a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="12345.html">Cosmetics</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="12345.html">Experts</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="12345.html">Contact</a>
 									</h1>
 								</li>	
 							</ul>
@@ -46,7 +66,7 @@
 					</nav>
 	<main>
 		<div class="col-md-12 col-lg-12"><br></div>
-		<div class="box">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-3">
