--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
     <title>NEXT HIVE</title>
   </head>
 	<body id="background">
@@ -20,7 +18,7 @@
 		 
     	<nav class="navbar navbar-expand-lg navbar-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_tiny.png" alt="" width="75" height="75"></a></h1>
+					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_white.png" alt="" width="75" height="75"></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -29,12 +27,32 @@
 							<ul class="navbar-nav mr-auto">
 								<li class="nav-item active">
 									<h1 class="my-class">
-										<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+										<a class="nav-link" href="index.html">Homepage<span class="sr-only">(current)</span></a>
 									</h1>									
 								 </li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Contact</a>
+											<a class="nav-link" href="12345.html">Clothes</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="123456.html">Home</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="1234567.html">Cosmetics</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="12345678.html">Experts</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="123456789.html">Contact</a>
 									</h1>
 								</li>	
 							</ul>
@@ -68,25 +86,25 @@
 	
 		<div class="box">
 		<div class="container">
-        <div class="row">		
-            <div class="col-md-4 col-lg-4">
+        <div class="row">	    
+			<div class="col-md-4 col-lg-4">
+				<!-- change click links to right page! -->
+				<header class="title">Clothes</header>
+				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
+				</header>
+            </div>
+			<div class="col-md-4 col-lg-4">
 							
-				<header class="subtext">Home</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
+				<header class="title">Home</header>
+				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
 
             </div>
 			<div class="col-md-4 col-lg-4">
-				<!-- change click links to right page! -->
-				<header class="subtext">Clothes</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
-				</header>
-            </div>
-			<div class="col-md-4 col-lg-4">
-				<header class="subtext">Cosmetics</header><br>
-				<header class="first"><a href="12345.html" target="_blank"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
+				<header class="title">Cosmetics</header>
+				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
 				</header>
             </div>
 			</div>
@@ -110,7 +128,7 @@ They will help you compare products and services. In addition they wil help you 
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345.html" target="_blank"><br><br><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
             </div>
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
