--- a/12345.html
+++ b/12345.html
@@ -20,7 +20,7 @@
 		 
     	<nav class="navbar navbar-expand-lg navbar-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_tiny.png" alt="" width="75" height="75"></a></h1>
+					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_white.png" alt="" width="200" height="200"></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -34,27 +34,27 @@
 								 </li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Home</a>
-									</h1>
-								</li>
-								<li class="nav-item">
-										<h1 class="my-class">
 											<a class="nav-link" href="12345.html">Clothes<span class="sr-only">(current)</span></a>
 									</h1>
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Cosmetics</a>
+											<a class="nav-link" href="123456.html">Home</a>
 									</h1>
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Experts</a>
+											<a class="nav-link" href="1234567.html">Cosmetics</a>
 									</h1>
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="12345.html">Contact</a>
+											<a class="nav-link" href="12345678.html">Experts</a>
+									</h1>
+								</li>
+								<li class="nav-item">
+										<h1 class="my-class">
+											<a class="nav-link" href="123456789.html">Contact</a>
 									</h1>
 								</li>	
 							</ul>
