--- a/12345.html
+++ b/12345.html
@@ -100,10 +100,11 @@
 			
 		<div class="col-md-12 col-lg-12"><br></div>
 			
-		<div class="box">
+		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-3 col-lg-3">
+            <div class="col-md-3 col-lg-3">
 				<h1 class="colortitle">Dresses</h1>
 				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
@@ -134,10 +135,11 @@
 		
 		<div class="col-md-12 col-lg-12"><br></div>
 		
-		<div class="box">
+		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="my-container">
 		<div class="container">
         <div class="row">
-		<div class="col-md-3 col-lg-3">
+            <div class="col-md-3 col-lg-3">
 				<h1 class="colortitle">T-shirts</h1>
 				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
