--- a/12345.html
+++ b/12345.html
@@ -76,21 +76,21 @@
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Low Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/jeans1.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>		
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Middle Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/jeans2.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>High Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/jeans3.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
@@ -111,21 +111,21 @@
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Low Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/dress1.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>		
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Middle Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/dress2.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>High Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/dress3.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
@@ -146,21 +146,21 @@
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Low Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/shirt1.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>		
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Middle Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/shirt2.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>High Price</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/baby.jpeg" alt="" width="150" height="100"></h4>
+				<h4><!-- Picture --><img class="img-fluid" src="images/shirt3.png" alt="" width="150" height="100"></h4>
 				<h5><!-- Explanation Text -->text</h5>
 			</article>
 			</div>
