--- a/12345.html
+++ b/12345.html
@@ -77,7 +77,12 @@
 			<article class="green">
 				<h3>Low Price</h3>
 				<h4><!-- Picture --><img class="img-fluid" src="images/jeans1.png" alt="" width="150" height="100"></h4>
-				<h5><!-- Explanation Text -->text</h5>
+				<h5><!-- Explanation Text --> 
+					<ul>
+						<li> vinted	
+					</ul> 
+				</h5>
+			
 			</article>
 			</div>		
 			<div class="col-md-3 col-lg-3">
