--- a/12345.html
+++ b/12345.html
@@ -76,12 +76,9 @@
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>Low Price</h3>
+				<h5>Vinted</h5>
 				<h4><!-- Picture --><img class="img-fluid" src="images/jeans1.png" alt="" width="150" height="100"></h4>
-				<h5><!-- Explanation Text --> 
-					<ul>
-						<li> vinted	
-					</ul> 
-				</h5>
+				
 			
 			</article>
 			</div>		
