--- a/12345.html
+++ b/12345.html
@@ -77,7 +77,7 @@
 			<article class="green">
 				<h3>Low Price</h3>
 				<h5>Vinted</h5>
-				<h4><!-- Picture --><img class="img-fluid" src="images/jeans1.png" alt="" width="150" height="100"></h4>
+				<h4> <a href="https://www.vinted.nl/vetements?search_text=sustainable%20jeans/" target="_blank"> <img class="img-fluid" src="images/jeans1.png" alt="" width="150" height="100"> </a> </h4>
 				
 			
 			</article>
