--- a/12345.html
+++ b/12345.html
@@ -85,15 +85,16 @@
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3>€25-€50</h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/jeans2.png" alt="" width="150" height="100"></h4>
-				<h5><!-- Explanation Text -->text</h5>
+				<h5><!-- Explanation Text -->NA-KD</h5>
+				<h4> <a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="150" height="100"> </a> </h4>
 			</article>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
 				<h3> €50+ /h3>
-				<h4><!-- Picture --><img class="img-fluid" src="images/jeans3.png" alt="" width="150" height="100"></h4>
-				<h5><!-- Explanation Text -->text</h5>
+				<h5><!-- Explanation Text -->KOTN</h5>
+				<h4> <a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="150" height="100"> </a> </h4>
+				
 			</article>
 			</div>
 		</div>
