--- a/12345.html
+++ b/12345.html
@@ -66,12 +66,13 @@
 					</nav>
 	<main>
 		<div class="col-md-12 col-lg-12"><br></div>
+		
+		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-3">
 				<h1 class="colortitle">Jeans</h1>
-				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
@@ -109,7 +110,6 @@
         <div class="row">
             <div class="col-md-3 col-lg-3">
 				<h1 class="colortitle">Dresses</h1>
-				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
@@ -147,7 +147,6 @@
         <div class="row">
             <div class="col-md-3 col-lg-3">
 				<h1 class="colortitle">T-shirts</h1>
-				<p class="summary"><!-- Explanation Text --> exlanation</p>
 			</div>
 			<div class="col-md-3 col-lg-3">
 			<article class="green">
