--- a/12345.html
+++ b/12345.html
@@ -66,7 +66,11 @@
 					</nav>
 	<main>
 		<div class="col-md-12 col-lg-12"><br></div>
-		
+		<h3> Clothing </h3> 
+		<h5> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. 
+
+Choose here your perfect sustainable garment with your chosen budget!  
+ </h5>
 		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
