--- a/123456.html
+++ b/123456.html
@@ -67,9 +67,11 @@
 	<main>
 		<div class="col-md-12 col-lg-12"><br></div>
 		<h3> Home </h3> 
-		<h5> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. 
+		<h5> In our homes, we use loads of different products every day such as furniture, tableware and cleaning products. However, most people do not realize these products can be sustainable as well. For example, cleaning products can contain loads of toxic elements which are bad for the environment or be packaged in loads of unnecessary plastic. Therefore, it is important to choose your homeware wisely.  
 
-Choose here your perfect sustainable garment with your chosen budget!  
+
+Choose here your perfect homeware with your chosen budget!  
+ 
  </h5>
 		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
