--- a/123456789.html
+++ b/123456789.html
@@ -63,24 +63,7 @@
 						</div>
 					</nav>
 	<header>
-		<div class="container">
-        <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-		</div>
-		</div>
-		<div class="container">
-        <div class="row">
-		<div class=" col-md-12 col-lg-12">
-			<div class="jumbotron jumbotron-fluid">
-			  <div class="container">
-				<h1 class="display-4"><img class="img-fluid" src="images/logo.png" alt=""></h1>
-				<p class="lead">Welcome to the website of NEXT HIVE. In a world where a sustainable lifestyle is very expensive, we believe that sustainability should be available for everyone, no matter what income. NEXT HIVE can offer you advice on living an environmental friendly lifestyle, as well as a comparison of various, sustainable products. Feel free to take a look around!</p>
-			  </div>
-			</div>
-		</div>
-		</div>
-		</div>
+		<h1 class="colortitle"> Contact </h1>
 	</header>
 	<main>
 	
