--- a/123456789.html
+++ b/123456789.html
@@ -75,13 +75,16 @@
 				<header class="subtext">
               				<h1 class="subtext">
 						<ul> 
-							<ol></ol>
+							<ol>Adress: Monseigneur Hopmansstraat 2, 4817 JS Breda</ol>
+							<ol>Phone: 1234-6773856</ol>
+							<ol>Or send us a message on
+			<a href="https://www.instagram.com/nexthiveofficial/" target="_blank">Instagram</a> or <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank">FaceBook</a></ol>
 						</ul>
 					</h1>
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/logo.png" alt="" width="600" height="400"></a></header>                
             </div>
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
