--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="col-md-4 col-lg-4">
 							
 				<header class="title">Home</header>
-				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
+				<header class="first"><a href="123456.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
@@ -104,7 +104,7 @@
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="title">Cosmetics</header>
-				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
+				<header class="first"><a href="1234567.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
 				</header>
             </div>
 			</div>
