--- a/12345678.html
+++ b/12345678.html
@@ -67,6 +67,13 @@
         <div class="row">
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
+		<div class="col-md-12 col-lg-12">
+		<h3> Clothing </h3> 
+		<h5> You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
+
+They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. Check out our experts!  
+ </h5>
+		</div>
 		</div>
 		</div>
 	</header>
@@ -77,13 +84,13 @@
         <div class="row">	    
 			<div class="col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
-				<header class="title">Clothes</header>
+				<header class="title">Linda Hemsworth</header>
 				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 							
-				<header class="title">Home</header>
+				<header class="title">Olivia Rhodes</header>
 				<header class="first"><a href="123456.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
@@ -91,7 +98,7 @@
 
             </div>
 			<div class="col-md-4 col-lg-4">
-				<header class="title">Cosmetics</header>
+				<header class="title">Harry Rineolds</header>
 				<header class="first"><a href="1234567.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
 				</header>
             </div>
