--- a/12345678.html
+++ b/12345678.html
@@ -85,13 +85,13 @@ They will help you compare products and services. In addition they wil help you 
 			<div class="col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
 				<header class="title">Linda Hemsworth</header>
-				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
+				<header class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400">
 				</header>
             </div>
 			<div class="col-md-4 col-lg-4">
 							
 				<header class="title">Olivia Rhodes</header>
-				<header class="first"><a href="123456.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
+				<header class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400">               
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
@@ -99,7 +99,7 @@ They will help you compare products and services. In addition they wil help you 
             </div>
 			<div class="col-md-4 col-lg-4">
 				<header class="title">Harry Rineolds</header>
-				<header class="first"><a href="1234567.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
+				<header class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400">               
 				</header>
             </div>
 			</div>
