--- a/index.html
+++ b/index.html
@@ -83,12 +83,20 @@
 		</div>
 	</header>
 	<main>
-	
 		<div class="box">
 		<div class="container">
-        <div class="row">	    
-			<div class="col-md-4 col-lg-4">
-				<!-- change click links to right page! -->
+        <div class="row">
+			<div class=" col-md-12 col-lg-12"> 
+				<header class="subtext">Compare sustainable products of one of the following categories:</header>
+			</div>
+		</div>
+		</div>
+		</div>
+		<div class=" col-md-12 col-lg-12"> <br> </div>
+		<div class="box">
+		<div class="container">
+        <div class="row">
+			<div class="col-md-4 col-lg-4">				
 				<header class="title">Clothes</header>
 				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
 				</header>
@@ -128,7 +136,7 @@ They will help you compare products and services. In addition they wil help you 
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+				<header class="first"><a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
             </div>
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
