--- a/12345678.html
+++ b/12345678.html
@@ -119,7 +119,7 @@ They will help you compare products and services. In addition they wil help you 
 				<header class="subtext">
                 			<h1 class="subtext">
 						<ul>
-							<ol> Weekly general advise </ol>
+							<ol> Weekly general advise in the form of a magazine </ol>
 							<ol> Two group meetings a month with a professional </ol> 
 							<ol> Access to the website </ol> 
 							
@@ -143,7 +143,7 @@ They will help you compare products and services. In addition they wil help you 
 				<header class="subtext">
                 			<h1 class="subtext">
 						<ul>
-							<ol> Weekly general advise </ol>
+							<ol> Weekly general advise in the form of a magazine </ol>
 							<ol> Two group meetings a month with a professional </ol> 
 							<ol> Access to the website </ol> 
 							<ol> Two personalised chats with an expert per month</ol> 
