--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@700&display=swap" rel="stylesheet">
     <meta charset="utf-8">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,18 +21,13 @@
 		 
     	<nav class="navbar navbar-expand-lg navbar-light">
 				<h1 class="my-class">
-					<a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_white.png" alt="" width="200" height="200"></a></h1>
+					<a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo_white.png" alt="" width="200" height="200"><span class="sr-only">(current)</span></a></h1>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
 
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
-								<li class="nav-item active">
-									<h1 class="my-class">
-										<a class="nav-link" href="index.html">Homepage<span class="sr-only">(current)</span></a>
-									</h1>									
-								 </li>
 								<li class="nav-item">
 										<h1 class="my-class">
 											<a class="nav-link" href="12345.html">Clothes</a>
