--- a/index.html
+++ b/index.html
@@ -82,11 +82,35 @@
 		</div>
 	</header>
 	<main>
+		<div class="container">
+        <div class="row">
+			<div class="col-md-12 col-lg-12"> <br>
+		</div>
+		</div>
+		</div>
+		<div class="box">
+		<div class="container">
+        <div class="row">
+            <div class="col-md-8 col-lg-8">
+				<h1 class="title">Our Experts</h1>
+				<header class="subtext">
+                <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries, we have experts ready to help you make your life as sustainable as possible. For the mere price 15.99 euros per month you receive personal advise to make your life more sustainable. <a href="12345678.html" target="_blank">Check out our experts and subscriptions!</a></h1>
+				</header>
+            </div>
+            <div class="col-md-4 col-lg-4">
+				<header class="first"><a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+            </div>
+		</div>
+		</div>
+		</div>
+		
+		<div class=" col-md-12 col-lg-12"><br></div>
+		
 		<div class="box">
 		<div class="container">
         <div class="row">
 			<div class=" col-md-12 col-lg-12"> 
-				<header class="subtext">Compare sustainable products of one of the following categories:</header>
+				<header class="subtext">Or make use of the free comparing system of the following categories</header>
 			</div>
 		</div>
 		</div>
@@ -117,31 +141,7 @@
 			</div>
 			</div>
 		</div>
-		<div class="container">
-        <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-		</div>
-		</div>
-		<div class="box">
-		<div class="container">
-        <div class="row">
-            <div class="col-md-8 col-lg-8">
-				<h1 class="title">Our Experts</h1>
-				<header class="subtext">
-                <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
-
-They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. Check out our experts!</h1>
-				</header>
-            </div>
-            <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
-            </div>
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-		</div>
-		</div>
-		</div>
+		
 	<footer class="endtext">
  			Follow us on
 			<a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig.png" alt="" width="30" height="30"></a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/facebook.png" alt="" width="30" height="30"></a>    
