--- a/12345678.html
+++ b/12345678.html
@@ -133,7 +133,10 @@ They will help you compare products and services. In addition they wil help you 
 	
 		<div class="box">
 		<div class="container">
-        <div class="row">	    
+        <div class="row">
+			<div class="col-md-12 col-lg-12">
+				Meet the experts who will help you make your life more sustainable:
+			</div>
 			<div class="col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
 				<header class="title">Linda Hemsworth</header>
@@ -152,6 +155,18 @@ They will help you compare products and services. In addition they wil help you 
 			<div class="col-md-4 col-lg-4">
 				<header class="title">Harry Rineolds</header>
 				<header class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400">               
+				</header>
+            </div>
+			<div class="col-md-4 col-lg-4">
+				<header class="subtext"> Linda is a 
+				</header>
+            </div>
+			<div class="col-md-4 col-lg-4">
+				<header class="subtext"> Olivia is a 
+				</header>
+            </div>
+			<div class="col-md-4 col-lg-4">
+				<header class="subtext"> Harry is a 
 				</header>
             </div>
 			</div>
