--- a/12345.html
+++ b/12345.html
@@ -162,8 +162,9 @@
 			<article class="green">
 				<h3> €50 + </h3>
 				<h4> <a href="https://www.prana.com/women/dresses-skirts.html" target="_blank"> <img class="img-fluid" src="images/dress3.png" alt="" width="500" height="150"> </a> </h4>
-				<h5> Prana </h5> Prana have a thought and that is 'sustainability is part of our DNA.' theyr ultimate goal is to inspire, educate and outfit the adventures of people with sustainable clothes.</h4>
-				<h4> 
+				<h5> Prana </h5> 
+				<h4> Prana have a thought and that is 'sustainability is part of our DNA.' theyr ultimate goal is to inspire, educate and outfit the adventures of people with sustainable clothes.</h4>
+				</h4> 
 			</article>
 			</div>
 		</div>
