--- a/123456.html
+++ b/123456.html
@@ -90,7 +90,7 @@
 				<h3>€5-€25</h3>
 				<a href="https://www.etsy.com/market/used_dinnerware?awc=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&zanpid=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179 " target="_blank"> <img class="img-fluid" src="images/table1.jpg"  alt="" width="400" height="200"></a>
 				<h5>Etsy</h5>
-				<h4> <!-- Information --></h4>
+				<h4> Etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. there are also a lot of sustainable products in their collection and good for the environment. </h4>
 			</article>
 			</div>		
 			<div class="col-md-4 col-lg-4">
