--- a/123456.html
+++ b/123456.html
@@ -145,7 +145,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
-				<a href="https://shoppurhome.com" target="_blank"> <img class="img-fluid" src="images/clean3.jpg" alt="" width="500" height="150"> </a>
+				<a href="https://shoppurhome.com" target="_blank"> <img class="img-fluid" src="images/clean3.png" alt="" width="500" height="150"> </a>
 				<h5> Pur Home </h5> 
 				<h4><!-- Information --></h4> 
 			</article>
@@ -188,7 +188,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
-				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.jpg" alt="" width="400" height="200"> </a>
+				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.png" alt="" width="400" height="200"> </a>
 				<h5> Avocado </h5>
 				<h4><!-- Information --></h4>
 			</article>
