--- a/12345678.html
+++ b/12345678.html
@@ -60,23 +60,33 @@
 							</form>
 						</div>
 					</nav>
-	<header>
+	<main>
+		<header>
+		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-md-12 col-lg-12">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
-		</div>
-		<div class="col-md-12 col-lg-12">
-		<h3> Experts </h3> 
-		<h5> You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible.
-
-They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. Check out our experts!  
- </h5>
+			<h3> Experts </h3> 
+			<h4> You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible. They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. </h4>
 		</div>
 		</div>
 		</div>
-	</header>
-	<main>
-		<div class="box">
+		</div>
+		<div class="col-md-12 col-lg-12"> <br>
+		<div class="the-container">
+		<div class="container">
+        <div class="row"> 
+			<div class="col-md-12 col-lg-12">
+				<h1>Subscriptions</h1>
+			</div>
+		</div>
+		</div>
+		</div>			
+		<div class="col-md-12 col-lg-12"><br></div>
+		</div>
+		</header>
+		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-8 col-lg-8">
@@ -102,7 +112,7 @@ They will help you compare products and services. In addition they wil help you 
 		</div>
 		<div class="col-md-12 col-lg-12"><br>
 		</div>
-		<div class="box">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-8 col-lg-8">
@@ -128,15 +138,20 @@ They will help you compare products and services. In addition they wil help you 
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br><br>
+		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="the-container">
+		<div class="container">
+        <div class="row"> 
+			<div class="col-md-12 col-lg-12">
+				<h1>Experts</h1>
+			</div>
 		</div>
-	
-		<div class="box">
+		</div>
+		</div>
+		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12">
-				Meet the experts who will help you make your life more sustainable:
-			</div>
 			<div class="col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
 				<header class="title">Linda Hemsworth</header>
