--- a/123456789.html
+++ b/123456789.html
@@ -66,7 +66,7 @@
 	</header>
 	<main>
 	
-		<div class="box">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-8 col-lg-8">
