--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</div>
 		</div>
 		</div>
-		<div class="box">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
             <div class="col-md-8 col-lg-8">
@@ -106,17 +106,17 @@
 		
 		<div class=" col-md-12 col-lg-12"><br></div>
 		
-		<div class="box">
+		<div class="the-container">
 		<div class="container">
         <div class="row">
 			<div class=" col-md-12 col-lg-12"> 
-				<header class="subtext">Or make use of the free comparing system of the following categories</header>
+				<h4>Or make use of the free comparing system of the following categories</h4>
 			</div>
 		</div>
 		</div>
 		</div>
 		<div class=" col-md-12 col-lg-12"> <br> </div>
-		<div class="box">
+		<div class="my-container">
 		<div class="container">
         <div class="row">
 			<div class="col-md-4 col-lg-4">				
